# miskai-flutter

./: .gitignore  README.md  pubspec.yaml
.claude/: settings.local.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: miskai_flutter.podspec
ios/Classes/: MiskaiFlutterPlugin.swift
lib/: miskai_flutter.dart  miskai_flutter_method_channel.dart  miskai_flutter_platform_interface.dart
lib/src/: miskai_g2p_engine.dart
lib/src/ffi/: native_bindings.dart
lib/src/models/: g2p_base.dart  (+1 more)
linux/: CMakeLists.txt  miskai_flutter_plugin.cc  miskai_flutter_plugin_private.h
linux/test/: miskai_flutter_plugin_test.cc
macos/: miskai_flutter.podspec
macos/Classes/: MiskaiFlutterPlugin.swift
src/: CMakeLists.txt  miskai_core.cpp
test/: miskai_flutter_method_channel_test.dart  miskai_flutter_test.dart
windows/: CMakeLists.txt  miskai_flutter_plugin.cpp  miskai_flutter_plugin.h  miskai_flutter_plugin_c_api.cpp
windows/test/: miskai_flutter_plugin_test.cpp
(+14 files in other folders)
